# platform.core.appfw.tpk-manifest-handlers

./: .cproject  .project  CMakeLists.txt
packaging/: tpk-manifest-handlers.spec
src/: CMakeLists.txt
src/tpk_manifest_handlers/: CMakeLists.txt  account_handler.cc  account_handler.h  application_manifest_constants.cc  application_manifest_constants.h  author_handler.cc  author_handler.h  description_handler.cc  description_handler.h  feature_handler.cc  feature_handler.h  package_handler.cc  package_handler.h  privileges_handler.cc  privileges_handler.h  profile_handler.cc  profile_handler.h  service_application_handler.cc  service_application_handler.h  shortcut_handler.cc  shortcut_handler.h  tpk-manifest-handlers.pc.in  tpk_config_parser.cc  tpk_config_parser.h  ui_and_service_application_infos.h  ui_application_handler.cc  ui_application_handler.h  watch_application_handler.cc  watch_application_handler.h  widget_application_handler.cc  widget_application_handler.h
src/tpk_manifest_handlers/common/: application_handler.cc  application_handler.h
